<resources>
  //国际化练习
  <string name="exercise_app_name">练习</string>
  <string name="exercise_storage_access_framework">存储访问框架</string>
  <string name="exercise_two_way_binding">双向绑定</string>
  <string name="exercise_create_new_document">创建新文档</string>
  <string name="exercise_use_multiple_tasks">使用多个任务</string>
  <string name="exercise_document_num">第{0}个文档</string>
  <string name="exercise_common_intent">常见Intent</string>
  <string name="exercise_easiest_intent">最简单的Intent</string>
  <string name="exercise_set_alarm">设置闹钟</string>
  <string name="exercise_show_alarms">显示所有闹钟</string>
  <string name="exercise_set_timer">创建倒计时器</string>
  <string name="exercise_add_calendar">添加日历事件</string>
  <string name="exercise_alarm_intent">闹钟相关Intent</string>
  <string name="exercise_camera_intent">相机相关Intent</string>
  <string name="exercise_contacts_intent">联系人相关Intent</string>
  <string name="exercise_camera_capture_image">获取图片</string>
  <string name="exercise_camera_capture_image_still">启动相机，不获取图片</string>
  <string name="exercise_camera_capture_video">获取视频</string>
  <string name="exercise_camera_capture_video_mode">启动相，不获取视频</string>
  <string name="exercise_selected_contacts">选择联系人</string>
  <string name="exercise_view_contacts">查看联系人</string>
  <string name="exercise_edit_contacts">编辑联系人</string>
  <string name="exercise_insert_contacts">插入联系人</string>
  <string name="exercise_phone_number">电话号码</string>
  <string name="exercise_contacts_name">联系人姓名</string>
  <string name="exercise_open_multiple_pic_from_provider">通过内容提供器获取多个文件</string>
  <string name="exercise_map_intent">地图相关Intent</string>
  <string name="exercise_open_map">打开地图</string>
  <string name="exercise_action_view_intent">纯展示相关Intent</string>
  <string name="exercise_search_intent">搜索相关的Intent</string>
  <string name="exercise_new_note_intent">创建笔记相关的Intent</string>
  <string name="exercise_call_intent">拨打电话相关的Intent</string>
  <string name="exercise_send_intent">发送消息相关的Intent</string>
  <string name="exercise_setting_intent">设置相关的Intent</string>
  <string name="exercise_motion_layout">练习MotionLayout</string>
  <string name="exercise_text_related">文案相关</string>
  <string name="exercise_notification">通知</string>
  <string name="exercise_notification_normal_title">简单通知</string>
  <string name="exercise_notification_normal_content">这是一条测试普通通知的通知，包含基本信息，图片，内容跳转，action，同时可以控制是否展示长文本！！！！</string>
  <string name="exercise_notification_replay_title">可回复通知</string>
  <string name="exercise_notification_replay_label">回复</string>
  <string name="exercise_notification_replay_hint">请在这里输入回复内容</string>
  <string name="exercise_notification_replay_content">明天有空吗？出来玩啊！</string>
  <string name="exercise_picture_and_shape">图片和图形</string>
  <string name="exercise_animator">动画</string>
  <string name="exercise_transition">过度动画</string>
  <string name="exercise_share_picture">共享图片</string>
  <string name="exercise_view_page_animator">ViewPager动画</string>
  <string name="title_activity_view_pager_animator">ViewPagerAnimatorActivity</string>
  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment</string>
</resources>