<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context="com.lixueyang.exercise.activity.MainActivity">

    <Button
        android:id="@+id/btn_goto_saf_activity"
        style="@style/GotoActivityButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/exercise_storage_access_framework"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_goto_two_way_binding_activity"
        style="@style/GotoActivityButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/exercise_two_way_binding"
        app:layout_constraintTop_toBottomOf="@id/btn_goto_saf_activity" />

    <Button
        android:id="@+id/btn_goto_recent_screen_activity"
        style="@style/GotoActivityButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/exercise_create_new_document"
        app:layout_constraintTop_toBottomOf="@id/btn_goto_two_way_binding_activity" />

    <Button
        android:id="@+id/btn_goto_common_intent_activity"
        style="@style/GotoActivityButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/exercise_common_intent"
        app:layout_constraintTop_toBottomOf="@id/btn_goto_recent_screen_activity" />

    <Button
        android:id="@+id/btn_goto_motion_layout_activity"
        style="@style/GotoActivityButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/exercise_motion_layout"
        app:layout_constraintTop_toBottomOf="@id/btn_goto_common_intent_activity" />

    <Button
        android:id="@+id/btn_goto_text_related_activity"
        style="@style/GotoActivityButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/exercise_text_related"
        app:layout_constraintTop_toBottomOf="@id/btn_goto_common_intent_activity" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
