<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.commonintent.ContactsIntentActivity">

  <Button
      android:id="@+id/btn_selected_contacts_intent"
      style="@style/FeaturesButton"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:text="@string/exercise_selected_contacts"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btn_show_contacts_intent"
      style="@style/FeaturesButton"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:text="@string/exercise_view_contacts"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/btn_selected_contacts_intent" />

  <Button
      android:id="@+id/btn_edit_contacts_intent"
      style="@style/FeaturesButton"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:text="@string/exercise_edit_contacts"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/btn_show_contacts_intent" />

  <Button
      android:id="@+id/btn_insert_contacts_intent"
      style="@style/FeaturesButton"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:text="@string/exercise_insert_contacts"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/btn_edit_contacts_intent" />

  <EditText
      android:id="@+id/et_contacts_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:hint="@string/exercise_contacts_name"
      app:layout_constraintBottom_toTopOf="@+id/et_phone_number" />

  <EditText
      android:id="@+id/et_phone_number"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:hint="@string/exercise_phone_number"
      app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>