<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.commonintent.CommonIntentActivity">

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <Button
          android:id="@+id/btn_easiest_intent"
          style="@style/FeaturesButton"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:text="@string/exercise_easiest_intent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <Button
          android:id="@+id/btn_add_calendar"
          style="@style/FeaturesButton"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:text="@string/exercise_add_calendar"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/btn_easiest_intent" />

      <Button
          android:id="@+id/btn_goto_alarm_activity"
          style="@style/GotoActivityButton"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:text="@string/exercise_alarm_intent"
          app:layout_constraintTop_toBottomOf="@id/btn_add_calendar" />

      <Button
          android:id="@+id/btn_goto_camera_activity"
          style="@style/GotoActivityButton"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:text="@string/exercise_camera_intent"
          app:layout_constraintTop_toBottomOf="@id/btn_goto_alarm_activity" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>

</layout>
