<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.commonintent.AlarmIntentActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_set_alarm_intent"
        style="@style/FeaturesButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/exercise_set_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_set_timer"
        style="@style/FeaturesButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/exercise_set_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_set_alarm_intent" />

    <Button
        android:id="@+id/btn_show_alarms"
        style="@style/FeaturesButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/exercise_show_alarms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_set_timer" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
